# ras_group8_navigation

./: CMakeLists.txt  README.md  package.xml
config/: default.yaml  default.yaml~
include/ras_group8_navigation/: Navigation.hpp  PurePursuit.hpp
launch/: ras_group8_navigation.launch
src/: Navigation.cpp  PurePursuit.cpp  navigation_client_node.cpp  navigation_node.cpp
test/: test_navigation.cpp  test_pure_pursuit.cpp
