<package>
 <name>ras_group8_navigation</name>
  <version>0.1.0</version>
  <description>
    Navigation package.
  </description>
  <license>BSD</license>

  <url type="website">https://github.com/RAS17-Group-8/ras_group8_navigation</url>

  <maintainer email="seb.lindberg@gmail.com">Sebastian Lindberg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>move_base_msgs</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>move_base_msgs</run_depend>
  
  <!-- ActionLib -->
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
</package>
